--- a/CompletedSource/CycleSales/CycleSales/CycleSales.csproj
+++ b/CompletedSource/CycleSales/CycleSales/CycleSales.csproj
@@ -69,23 +69,23 @@
     </Reference>
     <Reference Include="Microsoft.Framework.ConfigurationModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Framework.ConfigurationModel.1.0.0-beta2-10510\lib\net45\Microsoft.Framework.ConfigurationModel.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Framework.ConfigurationModel.1.0.0-beta1\lib\net45\Microsoft.Framework.ConfigurationModel.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Framework.DependencyInjection, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Framework.DependencyInjection.1.0.0-beta2-10527\lib\net45\Microsoft.Framework.DependencyInjection.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Framework.DependencyInjection.1.0.0-beta1\lib\net45\Microsoft.Framework.DependencyInjection.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Framework.Logging, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Framework.Logging.1.0.0-beta2-10506\lib\net45\Microsoft.Framework.Logging.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Framework.Logging.1.0.0-beta1\lib\net45\Microsoft.Framework.Logging.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Framework.Logging.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Framework.Logging.Interfaces.1.0.0-beta2-10506\lib\net45\Microsoft.Framework.Logging.Interfaces.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Framework.Logging.Interfaces.1.0.0-beta1\lib\net45\Microsoft.Framework.Logging.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Framework.OptionsModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Framework.OptionsModel.1.0.0-beta2-10505\lib\net45\Microsoft.Framework.OptionsModel.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Framework.OptionsModel.1.0.0-beta1\lib\net45\Microsoft.Framework.OptionsModel.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Configuration, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
