--- a/CompletedSource/CycleSales/CycleSales/packages.config
+++ b/CompletedSource/CycleSales/CycleSales/packages.config
@@ -10,11 +10,11 @@
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net451" />
   <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net451" />
-  <package id="Microsoft.Framework.ConfigurationModel" version="1.0.0-beta2-10510" targetFramework="net451" />
-  <package id="Microsoft.Framework.DependencyInjection" version="1.0.0-beta2-10527" targetFramework="net451" />
-  <package id="Microsoft.Framework.Logging" version="1.0.0-beta2-10506" targetFramework="net451" />
-  <package id="Microsoft.Framework.Logging.Interfaces" version="1.0.0-beta2-10506" targetFramework="net451" />
-  <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta2-10505" targetFramework="net451" />
+  <package id="Microsoft.Framework.ConfigurationModel" version="1.0.0-beta1" targetFramework="net451" />
+  <package id="Microsoft.Framework.DependencyInjection" version="1.0.0-beta1" targetFramework="net451" />
+  <package id="Microsoft.Framework.Logging" version="1.0.0-beta1" targetFramework="net451" />
+  <package id="Microsoft.Framework.Logging.Interfaces" version="1.0.0-beta1" targetFramework="net451" />
+  <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta1" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net451" />
   <package id="Remotion.Linq" version="1.15.15.0" targetFramework="net451" />
