--- a/StartingSource/UnicornClicker/UnicornClicker/UnicornClicker.Windows/UnicornClicker.Windows.csproj
+++ b/StartingSource/UnicornClicker/UnicornClicker/UnicornClicker.Windows/UnicornClicker.Windows.csproj
@@ -138,45 +138,57 @@
     </SDKReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\..\packages\EntityFramework.7.0.0-beta2-11514\lib\portable-net451+win81+wpa81\EntityFramework.dll</HintPath>
+    <Reference Include="EntityFramework, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\EntityFramework.7.0.0-beta1\lib\portable-net451+win81+wpa81\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.Migrations">
-      <HintPath>..\..\packages\EntityFramework.Migrations.7.0.0-beta2-11514\lib\portable-net451+win81+wpa81\EntityFramework.Migrations.dll</HintPath>
+    <Reference Include="EntityFramework.Migrations, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\EntityFramework.Migrations.7.0.0-beta1\lib\portable-net451+win81+wpa81\EntityFramework.Migrations.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.Relational">
-      <HintPath>..\..\packages\EntityFramework.Relational.7.0.0-beta2-11514\lib\portable-net451+win81+wpa81\EntityFramework.Relational.dll</HintPath>
+    <Reference Include="EntityFramework.Relational, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\EntityFramework.Relational.7.0.0-beta1\lib\portable-net451+win81+wpa81\EntityFramework.Relational.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.SQLite">
-      <HintPath>..\..\packages\EntityFramework.SQLite.7.0.0-beta2-11514\lib\portable-net451+win81+wpa81\EntityFramework.SQLite.dll</HintPath>
+    <Reference Include="EntityFramework.SQLite, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\EntityFramework.SQLite.7.0.0-beta1\lib\portable-net451+win81+wpa81\EntityFramework.SQLite.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Data.SQLite">
-      <HintPath>..\..\packages\Microsoft.Data.SQLite.1.0.0-beta2-10508\lib\portable-net451+win81+wpa81\Microsoft.Data.SQLite.dll</HintPath>
+    <Reference Include="Microsoft.Data.SQLite, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.Data.SQLite.1.0.0-beta1\lib\portable-net451+win81+wpa81\Microsoft.Data.SQLite.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.ConfigurationModel">
-      <HintPath>..\..\packages\Microsoft.Framework.ConfigurationModel.1.0.0-beta2-10510\lib\portable-net451+win81+wpa81\Microsoft.Framework.ConfigurationModel.dll</HintPath>
+    <Reference Include="Microsoft.Framework.ConfigurationModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.Framework.ConfigurationModel.1.0.0-beta1\lib\portable-net451+win81+wpa81\Microsoft.Framework.ConfigurationModel.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.DependencyInjection">
-      <HintPath>..\..\packages\Microsoft.Framework.DependencyInjection.1.0.0-beta2-10527\lib\portable-net451+win81+wpa81\Microsoft.Framework.DependencyInjection.dll</HintPath>
+    <Reference Include="Microsoft.Framework.DependencyInjection, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.Framework.DependencyInjection.1.0.0-beta1\lib\portable-net451+win81+wpa81\Microsoft.Framework.DependencyInjection.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.Logging">
-      <HintPath>..\..\packages\Microsoft.Framework.Logging.1.0.0-beta2-10506\lib\portable-net451+win81+wpa81\Microsoft.Framework.Logging.dll</HintPath>
+    <Reference Include="Microsoft.Framework.Logging, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.Framework.Logging.1.0.0-beta1\lib\portable-net451+win81+wpa81\Microsoft.Framework.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.Logging.Interfaces">
-      <HintPath>..\..\packages\Microsoft.Framework.Logging.Interfaces.1.0.0-beta2-10506\lib\portable-net451+win81+wpa81\Microsoft.Framework.Logging.Interfaces.dll</HintPath>
+    <Reference Include="Microsoft.Framework.Logging.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.Framework.Logging.Interfaces.1.0.0-beta1\lib\portable-net451+win81+wpa81\Microsoft.Framework.Logging.Interfaces.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.OptionsModel">
-      <HintPath>..\..\packages\Microsoft.Framework.OptionsModel.1.0.0-beta2-10505\lib\portable-net451+win81+wpa81\Microsoft.Framework.OptionsModel.dll</HintPath>
+    <Reference Include="Microsoft.Framework.OptionsModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.Framework.OptionsModel.1.0.0-beta1\lib\portable-net451+win81+wpa81\Microsoft.Framework.OptionsModel.dll</HintPath>
     </Reference>
     <Reference Include="Remotion.Linq">
       <HintPath>..\..\packages\Remotion.Linq.1.15.15.0\lib\portable-net45+wp80+wpa81+win\Remotion.Linq.dll</HintPath>
     </Reference>
-    <Reference Include="System.Collections.Immutable">
+    <Reference Include="System.Collections.Immutable, Version=1.1.32.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\System.Collections.Immutable.1.1.32-beta\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Data.Common">
-      <HintPath>..\..\packages\System.Data.Common.1.0.0-beta2-10488\lib\portable-net451+win81+wpa81\System.Data.Common.dll</HintPath>
+    <Reference Include="System.Data.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\System.Data.Common.1.0.0-beta1\lib\portable-net451+win81+wpa81\System.Data.Common.dll</HintPath>
     </Reference>
     <Reference Include="System.Interactive.Async">
       <HintPath>..\..\packages\Ix-Async.1.2.3-beta\lib\portable-windows8+net45+wp8+wpa81\System.Interactive.Async.dll</HintPath>
