--- a/StartingSource/UnicornClicker/UnicornClicker/UnicornClicker.Windows/packages.config
+++ b/StartingSource/UnicornClicker/UnicornClicker/UnicornClicker.Windows/packages.config
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="7.0.0-beta2-11514" targetFramework="win81" />
-  <package id="EntityFramework.Migrations" version="7.0.0-beta2-11514" targetFramework="win81" />
-  <package id="EntityFramework.Relational" version="7.0.0-beta2-11514" targetFramework="win81" />
-  <package id="EntityFramework.SQLite" version="7.0.0-beta2-11514" targetFramework="win81" />
+  <package id="EntityFramework" version="7.0.0-beta1" targetFramework="win81" />
+  <package id="EntityFramework.Migrations" version="7.0.0-beta1" targetFramework="win81" />
+  <package id="EntityFramework.Relational" version="7.0.0-beta1" targetFramework="win81" />
+  <package id="EntityFramework.SQLite" version="7.0.0-beta1" targetFramework="win81" />
   <package id="Ix-Async" version="1.2.3-beta" targetFramework="win81" />
-  <package id="Microsoft.Data.SQLite" version="1.0.0-beta2-10508" targetFramework="win81" />
-  <package id="Microsoft.Framework.ConfigurationModel" version="1.0.0-beta2-10510" targetFramework="win81" />
-  <package id="Microsoft.Framework.DependencyInjection" version="1.0.0-beta2-10527" targetFramework="win81" />
-  <package id="Microsoft.Framework.Logging" version="1.0.0-beta2-10506" targetFramework="win81" />
-  <package id="Microsoft.Framework.Logging.Interfaces" version="1.0.0-beta2-10506" targetFramework="win81" />
-  <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta2-10505" targetFramework="win81" />
+  <package id="Microsoft.Data.SQLite" version="1.0.0-beta1" targetFramework="win81" />
+  <package id="Microsoft.Framework.ConfigurationModel" version="1.0.0-beta1" targetFramework="win81" />
+  <package id="Microsoft.Framework.DependencyInjection" version="1.0.0-beta1" targetFramework="win81" />
+  <package id="Microsoft.Framework.Logging" version="1.0.0-beta1" targetFramework="win81" />
+  <package id="Microsoft.Framework.Logging.Interfaces" version="1.0.0-beta1" targetFramework="win81" />
+  <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta1" targetFramework="win81" />
   <package id="Remotion.Linq" version="1.15.15.0" targetFramework="win81" />
   <package id="System.Collections.Immutable" version="1.1.32-beta" targetFramework="win81" />
-  <package id="System.Data.Common" version="1.0.0-beta2-10488" targetFramework="win81" />
+  <package id="System.Data.Common" version="1.0.0-beta1" targetFramework="win81" />
 </packages>
